--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtsystems-opensource-src (5.1+gemian) stretch; urgency=medium
+
+  * Building for Qt 5.7.1.
+
+ -- Adam Boardman <adamboardman@gmail.com>  Sat, 10 Feb 2018 11:56:03 +0000
+
 qtsystems-opensource-src (5.1+ubports) xenial; urgency=medium
 
   [ Albert Astals Cid ]
